@@ -3,3 +3,5 @@ The unlock command needs to copy a file, and it would be great to use this:
 
 O(1) overhead on BTRFS. Needs coreutils 7.6; and remember that git-annex
 may be used on systems without coreutils..
+
+[[done]]
