@@ -2,8 +2,10 @@ git-annex (0.08) UNRELEASED; urgency=low
 
   * Fix `git annex add ../foo` (when ran in a subdir of the repo).
   * Add configure step to build process.
-  * configure: Check to see if cp -a can be used.
-  * configure: Check to see if cp --reflink=auto can be used.
+  * Only use cp -a if it is supported, falling back to cp -p or plain cp
+    as needed for portability.
+  * cp --reflink=auto is used if supported, and will make git annex unlock
+    much faster on filesystems like btrfs that support copy of write.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 17 Nov 2010 13:54:49 -0400
 
